# memorable-yc-build

./: .env.example  .gitignore  README.md  package.json  pyproject.toml
agent-py/: pyproject.toml
agent-py/data/: knowledge_base.json
agent-py/tests/: test_agent.py  test_gnn.py  test_moss.py
apps/web/: .env.example  app-config.ts  package.json  pnpm-lock.yaml
apps/web/app/: layout.tsx
apps/web/app/api/benchmark/backup/: route.ts
apps/web/app/api/benchmark/reset/: route.ts
apps/web/app/api/benchmark/runs/: route.ts
apps/web/app/api/benchmark/runs/[id]/: route.ts
apps/web/app/api/benchmark/start/: route.ts
apps/web/app/api/events/: route.ts
apps/web/app/api/events/publish/: route.ts
apps/web/app/api/init/: route.ts
apps/web/app/api/integrations/status/: route.ts
apps/web/app/api/memory/graph/: route.ts
apps/web/app/api/memory/status/: route.ts
apps/web/app/api/token/: route.ts
apps/web/app/demo/: page.tsx
apps/web/components/app/: app.tsx  memorable-layout.tsx  moss-results-panel.tsx  welcome-view.tsx
apps/web/components/demo/: comparison-panel.tsx  demo-layout.tsx  demo-voice-panel.tsx  event-feed.tsx  memory-graph.tsx
apps/web/components/landing/: landing-page.tsx
apps/web/hooks/: useMossContextEvents.ts
apps/web/lib/: benchmark-store.ts  benchmark-types.ts  events.ts
apps/web/styles/: globals.css  memorable.css
data/: knowledge_base.json
docs/: DEMO_SCRIPT_2MIN.md  GOOGLE_FORM_DESCRIPTION.md  MEMORY_LAYER_TECH.md  PITCH.md
worker/: agent.py  pyproject.toml
(+2 files in other folders)
