[project]
name = "memorable-worker"
version = "2.0.0"
requires-python = ">=3.10, <3.15"
dependencies = [
    "memorable",
    "httpx",
    "python-dotenv",
    "livekit-agents[silero,turn-detector]==1.5.16",
    "livekit-plugins-ai-coustics~=0.2",
]

[tool.uv.sources]
memorable = { workspace = true }
